skin.ini: bump version to 0.1.0.0

--- a/skin.ini
+++ b/skin.ini
@@ -1,6 +1,6 @@
 //skin.ini default configuration
 [General]
-Name: kome
+Name: kome v0.1.0.0
 Author: Chua Hou
 Version: 2.7
 AllowSliderBallTint: 1
